# dlyaka

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  release-binaries.yml  tests.yml
claude_skill/: install.sh
claude_skill/dlyaka/: SKILL.md
dlyaka/: __init__.py  cli.py  crypto.py  gui.py  vault.py
dlyaka/providers/: claude.py  gpt.py
examples/: chatgpt_example.py  claude_example.py
packaging/: entry_cli.py  entry_gui.py
tests/: test_cli.py  test_crypto.py  test_vault.py
