[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dlyaka"
version = "0.1.0"
description = "Don't Leak Your API Key Again — encrypted local API key vault for Claude, ChatGPT, and any AI provider."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "TDYSKY" }]
keywords = ["api-key", "vault", "encryption", "claude", "anthropic", "openai", "chatgpt", "security", "secrets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=41.0",
    "click>=8.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.20"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.20", "openai>=1.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
dlyaka = "dlyaka.cli:cli"

[project.urls]
Homepage = "https://github.com/TDYSKY/dlyaka"
Repository = "https://github.com/TDYSKY/dlyaka"
Issues = "https://github.com/TDYSKY/dlyaka/issues"

[tool.hatch.build.targets.wheel]
packages = ["dlyaka"]

[tool.pytest.ini_options]
testpaths = ["tests"]
